# wovmohCore

./: .qmlls.ini  CMakeLists.txt  DataTypes.h  main.cpp  node.cpp  node.h  patchgraph.cpp  patchgraph.h  pin.cpp  pin.h  pretty.json
Nodes/: corenodes.cpp  corenodes.h
core/: node.cpp  node.h  patchgraph.cpp  patchgraph.h  pin.cpp  pin.h
demos/: khanalgo-demo.py  patch_example.json
demos/ui-blockout/: package-lock.json
demos/ui-blockout/patchList/: index.css  output.css  patchList.html
demos/ui-blockout/static/: wovmoh-logo.kra  wovmoh-logo.kra~  wovmoh-logo.png~
graph/: nodedata.cpp  nodedata.h  patchdata.cpp  patchdata.h  patchmanager.cpp  patchmanager.h  pindata.cpp  pindata.h
types/: datatypes.h
ui/: Main.qml  Test.qml  main.js
